<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todoapp.TodoActivity"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/todo_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_categorias"
            style="@style/TodoSubtitle"

            >

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_tasks"
            android:layout_marginHorizontal="32dp"
            style="@style/TodoSubtitle"
            >

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:id="@+id/rvTastk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        app:backgroundTint="@color/todo_accent"
        app:fabSize="normal"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"

        >
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</FrameLayout>